[REFACTOR/API] 관리자 쿠폰/신고 permitAll 제거 및 관리자 인증 적용 (#325)
* [Refactor/api] 관리자 쿠폰/신고 API에 관리자 인증 적용

- ApiSecurityConfig에서 /admin/v1/coupon/**, /admin/v1/complaints/** 임시 permitAll 제거 (adminSecurityFilterChain이 이미 처리)
- 신고 처리 상태 변경(ComplaintController.updateStatus)의 처리자 기록이 ClerkPrincipal 전용 @CurrentMember 때문에 관리자 인증 체계에서 항상 null이 되던 버그 수정
- @AuthenticationPrincipal AdminPrincipal로 관리자를 직접 받고 clerkId를 서비스로 전달해 처리자 Member를 조회하도록 변경

IssueNum #324

* [Test/api] 관리자 쿠폰/신고 테스트 관리자 인증 방식으로 수정

- ClerkPrincipal 기반 임시 인증을 AdminPrincipal + ROLE_ADMIN 방식으로 교체
- /admin/v1/coupon/**, /admin/v1/complaints/**가 이제 adminSecurityFilterChain에서 ROLE_ADMIN을 요구하므로 모든 요청에 인증 추가
- ComplaintCommandServiceTest는 처리자 조회가 clerkId 기준으로 바뀐 것에 맞춰 호출부 수정

IssueNum #324